--- a/day14/MusicPlayer with service/app/src/main/res/layout/activity_about__app.xml
+++ b/day14/MusicPlayer with service/app/src/main/res/layout/activity_about__app.xml
@@ -10,11 +10,21 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="left"
         android:textSize="40dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="17dp"
         android:text="About App"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/aboutApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="85dp" />
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="27dp"
+        android:layout_toStartOf="@+id/textView4"
+        android:gravity="center_horizontal|center"
+        android:text="TextView" />
 </RelativeLayout>
