--- a/day14/MusicPlayer with service/app/src/main/res/layout/activity_splash_screen.xml
+++ b/day14/MusicPlayer with service/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/download"
     android:visibility="visible"
     tools:context="the_tinker_project.co.in.musicplayer.SplashScreen">
 
@@ -12,11 +12,12 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="45dp"
-        android:layout_marginTop="187dp"
-        android:text="Splash Screen"
-        android:textSize="40dp"
-        android:visibility="visible" />
+        android:text="Bisvarup Mukherjee"
+        android:textSize="30dp"
+        android:visibility="visible"
+        android:textColor="#000000"
+        android:background="#fcd987"
+        android:layout_marginBottom="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
