--- a/day14/MusicPlayer with service/app/src/main/res/values/colors.xml
+++ b/day14/MusicPlayer with service/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#556ff9</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#de0e12</color>
+    <color name="colorPrimaryDark">#ff000d</color>
+    <color name="colorAccent">#ffff5e</color>
 </resources>
