--- a/day14/MusicPlayer with service/app/src/main/res/layout/activity_about__me.xml
+++ b/day14/MusicPlayer with service/app/src/main/res/layout/activity_about__me.xml
@@ -15,4 +15,25 @@
         android:text="About Me"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/callMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:onClick="callAuthor"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="58dp"
+        android:text="Call Me" />
+
+    <Button
+        android:id="@+id/sendSms"
+        android:onClick="textAuthor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/callMe"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="66dp"
+        android:text="Send Sms" />
 </RelativeLayout>
